syntax = "proto3";

package auth;

//
option go_package = "morzle.auth.v1;authv1";

service Auth{
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterResponse{
  int64 user_id = 1;    // возвращает id авторизованного пользователя
}

message RegisterRequest{
  string login = 1;  // логин
  string password = 2; // пароль
}

message LoginRequest{
  string login = 1;   // логин
  string password = 2; // пароль
  int32 app_id = 3; // id приложения
}

message LoginResponse{
  string token = 1; // возвращает JWT авторизованного пользователя
}

message IsAdminRequest{
  int32 user_id = 1;
}

message IsAdminResponse{
  bool is_admin = 1;
}